Added user list for chat rooms and json mocks

--- a/src/main/resources/static/room.html
+++ b/src/main/resources/static/room.html
@@ -19,6 +19,8 @@
     <div>
         <button id="disconnect" onclick="disconnect();">Disconnect</button>
     </div>
+    <div id="userListDiv">
+    </div>
 
 </div>
 </body>
