Added login styles

--- a/src/main/resources/static/lobby.html
+++ b/src/main/resources/static/lobby.html
@@ -2,10 +2,13 @@
 <html>
 <head>
     <title>WebSocket Chat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="sockjs-0.3.4.js"></script>
     <script src="stomp.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/lobby.js"></script>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/lobby.css" rel="stylesheet" type="text/css">
 </head>
 <body onload="init()">
 <nav>
