Basic styles ready

--- a/src/main/resources/static/create_room.html
+++ b/src/main/resources/static/create_room.html
@@ -6,6 +6,8 @@
     <script src="stomp.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/create_room.js"></script>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/create_room.css" rel="stylesheet" type="text/css">     
 </head>
 <body onload="init()">
 <div id="create_form">
