Fixed reloading and sudden exit bugs with the leaving system

--- a/src/main/resources/static/room.html
+++ b/src/main/resources/static/room.html
@@ -9,7 +9,7 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <link href="css/room.css" rel="stylesheet" type="text/css">    
 </head>
-<body onload="init()">
+<body onload="init()" onbeforeunload="disconnect()">
 <div>
     <div id="conversationDiv">
     </div>
