Removed access to features from regular users

--- a/src/main/resources/static/lobby.html
+++ b/src/main/resources/static/lobby.html
@@ -11,7 +11,7 @@
     <link href="css/lobby.css" rel="stylesheet" type="text/css">
 </head>
 <body onload="init()">
-<nav>
+<nav id="menu">
 <button onclick="goToCreateRoom();">Create Room</button>
 </nav>
 <div id="rooms"></div>
