--- a/src/main/resources/static/create_user.html
+++ b/src/main/resources/static/create_user.html
@@ -5,7 +5,7 @@
     <script src="sockjs-0.3.4.js"></script>
     <script src="stomp.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/create_room.js"></script>
+    <script type="text/javascript" src="js/create_user.js"></script>
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <link href="css/create_room.css" rel="stylesheet" type="text/css">     
 </head>
@@ -13,7 +13,15 @@
 <div id="create_form">
 	<label>Name</label>
 	<input type="text" id="name"><br>
-	<button onclick="createRoom();">Create</button>
+	<label>Password</label>
+	<input type="text" id="password"><br>	
+	<label>Role</label>
+	<select id="type">
+  		<option value="ADMIN">Admin</option>
+  		<option value="USER">User</option>
+  	</select>
+	<br>
+	<button onclick="createUser();">Create</button>
 	<button onclick="goBack();">Back</button>
 </div>
 </body>
