Basic user ban implemented

--- a/src/main/resources/static/lobby.html
+++ b/src/main/resources/static/lobby.html
@@ -11,7 +11,11 @@
     <link href="css/lobby.css" rel="stylesheet" type="text/css">
 </head>
 <body onload="init()">
+<nav id="usermenu">
+	<button onclick="goBack();">Log Out</button>
+</nav>
 <nav id="menu">
+	<button onclick="goBack();">Log Out</button>
 	<button id="manage_rooms_button" onclick="goToManageRooms();">Manage Rooms</button>
 	<button id="manage_users_button" onclick="goToManageUsers();">Manage Users</button>	
 	<button id="create_room_button" onclick="goToCreateRoom();">Create Room</button>
