Fixed a lot of bugs, modified styles, added titles

--- a/src/main/resources/static/create_room.html
+++ b/src/main/resources/static/create_room.html
@@ -10,6 +10,7 @@
     <link href="css/create_room.css" rel="stylesheet" type="text/css">     
 </head>
 <body onload="init()">
+<div class="title">Create Room</div>
 <div id="create_form">
 	<label>Name</label>
 	<input type="text" id="name"><br>
