--- a/src/main/resources/static/room.html
+++ b/src/main/resources/static/room.html
@@ -10,6 +10,7 @@
     <link href="css/room.css" rel="stylesheet" type="text/css">    
 </head>
 <body onload="init()" onbeforeunload="disconnect()">
+<div class="title">Room</div>
 <div>
     <div id="conversationDiv">
     </div>
